--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "first",
-    "slug": "first",
+    "name": "justEat",
+    "slug": "just-eat",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
